--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -7,6 +7,18 @@
     android:padding="8dp">
 
     <TextView
+        android:id="@+id/textAccessDenied"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="🔒 Acceso Bloqueado. Por favor, autentíquese con su biometría."
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:padding="32dp"
+        android:visibility="gone"
+        android:layout_marginTop="50dp"/>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Recientes"
